--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,15 @@ packages = [
 python = "^3.11"
 ruckig = "^0.14.0"
 
+[tool.poetry.group.dev.dependencies]
+yapf = "^0.40.1"
+pytest-cases = "^3.8.0"
+pytest = "^7.4.3"
+pytest-timeout = "^2.2.0"
+pytest-asyncio = "^0.21.1"
+pytest-cov = "^4.1.0"
+pytest-xdist = "^3.4.0"
+
 [build-system]
 requires = ["scikit-build-core", "pybind11"]
 build-backend = "scikit_build_core.build"
