--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,4 +8,7 @@
     "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": true,
     "python.terminal.activateEnvInCurrentTerminal": true,
+    "cSpell.words": [
+        "ruckig"
+    ],
 }
