--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ python = "^3.11"
 ruckig = "^0.14.0"
 matplotlib = "^3.9.2"
 tikzplotlib = "^0.10.1"
+plotly = "^5.24.1"
 
 [tool.poetry.group.dev.dependencies]
 yapf = "^0.40.1"
