--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,9 @@
     "python.testing.pytestEnabled": true,
     "python.terminal.activateEnvInCurrentTerminal": true,
     "cSpell.words": [
-        "ruckig"
+        "arange",
+        "ruckig",
+        "xaxis",
+        "yaxis"
     ],
 }
